//! gRPC service definitions for C2 Router
//!
//! This module provides the gRPC service interface for command dispatch.
//! In production, this would use Tonic with protobuf definitions.

#![warn(missing_docs)]

use crate::command_types::{SwarmCommand, UnitCommand};
use crate::dispatcher::{CommandDispatcher, SwarmDispatchStatus, UnitDispatchResult};
use crate::quorum::QuorumGate;
use serde::{Deserialize, Serialize};

/// gRPC service request for unit command
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct UnitCommandRequest {
    /// Unit identifier
    pub unit_id: String,
    /// Command to execute
    pub command: UnitCommand,
    /// Command signatures
    pub signatures: Vec<String>,
    /// Request timestamp
    pub timestamp_ns: u64,
}

/// gRPC service request for swarm command
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct SwarmCommandRequest {
    /// Swarm command identifier
    pub swarm_command_id: String,
    /// Target unit identifiers
    pub target_unit_ids: Vec<String>,
    /// Command to execute
    pub command: SwarmCommand,
    /// Command signatures
    pub signatures: Vec<String>,
    /// Request timestamp
    pub timestamp_ns: u64,
}

/// gRPC service response for unit command
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct UnitCommandResponse {
    /// Dispatch result
    pub result: UnitDispatchResult,
    /// Response timestamp
    pub timestamp_ns: u64,
}

/// gRPC service response for swarm command
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct SwarmCommandResponse {
    /// Dispatch status
    pub status: SwarmDispatchStatus,
    /// Response timestamp
    pub timestamp_ns: u64,
}

/// C2 Router gRPC service (placeholder)
///
/// In production, this would be implemented as a Tonic gRPC service
/// with protobuf definitions.
#[allow(dead_code)]
pub struct C2RouterService {
    /// Command dispatcher
    dispatcher: CommandDispatcher,
    /// Quorum gate
    quorum_gate: QuorumGate,
}

impl C2RouterService {
    /// Create a new C2 Router service
    pub fn new(dispatcher: CommandDispatcher, quorum_gate: QuorumGate) -> Self {
        Self {
            dispatcher,
            quorum_gate,
        }
    }
    
    /// Handle unit command request (placeholder)
    pub fn handle_unit_command(&self, _request: UnitCommandRequest) -> UnitCommandResponse {
        // Placeholder implementation
        // In production:
        // 1. Validate signatures with quorum_gate
        // 2. Dispatch command with dispatcher
        // 3. Record in Truth-Chain
        // 4. Return result
        
        UnitCommandResponse {
            result: UnitDispatchResult::Success {
                unit_id: "placeholder".to_string(),
                timestamp_ns: 0,
            },
            timestamp_ns: 0,
        }
    }
    
    /// Handle swarm command request (placeholder)
    pub fn handle_swarm_command(&self, _request: SwarmCommandRequest) -> SwarmCommandResponse {
        // Placeholder implementation
        // In production:
        // 1. Validate signatures with quorum_gate
        // 2. Dispatch command with dispatcher
        // 3. Record in Truth-Chain
        // 4. Return aggregated status
        
        SwarmCommandResponse {
            status: SwarmDispatchStatus::new(
                "placeholder".to_string(),
                vec![],
                0,
            ),
            timestamp_ns: 0,
        }
    }
}

// Note: In production, this would use Tonic's service trait implementation
// Example protobuf definition would be in proto/c2.proto:
//
// service C2Router {
//   rpc ExecuteUnitCommand(UnitCommandRequest) returns (UnitCommandResponse);
//   rpc ExecuteSwarmCommand(SwarmCommandRequest) returns (SwarmCommandResponse);
//   rpc GetCommandStatus(CommandStatusRequest) returns (CommandStatusResponse);
//   rpc AbortSwarmCommand(AbortRequest) returns (AbortResponse);
// }
