/**
 * C2 Router REST API endpoints
 * 
 * Provides REST interfaces for unit and swarm command dispatch.
 * All commands are authenticated and routed through the C2 router
 * for authority verification and quorum gating.
 */

export interface UnitCommandRequest {
  unitId: string;
  command: any;  // UnitCommand (JSON)
  signatures: string[];
  timestampNs: number;
}

export interface UnitCommandResponse {
  success: boolean;
  unitId: string;
  message: string;
  timestampNs: number;
}

export interface SwarmCommandRequest {
  swarmCommandId: string;
  targetUnitIds: string[];
  command: any;  // SwarmCommand (JSON)
  signatures: string[];
  timestampNs: number;
}

export interface SwarmCommandResponse {
  swarmCommandId: string;
  totalUnits: number;
  successCount: number;
  failureCount: number;
  timeoutCount: number;
  completionPercent: number;
  timestampNs: number;
}

export interface CommandStatusResponse {
  commandId: string;
  status: 'pending' | 'executing' | 'completed' | 'failed' | 'aborted';
  details: any;
  timestampNs: number;
}

export interface AbortResponse {
  success: boolean;
  message: string;
  timestampNs: number;
}

/**
 * C2 Router REST endpoints
 * 
 * In production, these would be implemented as Express.js routes
 * with authentication middleware and gRPC client integration.
 */
export class C2Routes {
  /**
   * POST /api/c2/command
   * 
   * Execute a command on a single unit
   */
  static async executeUnitCommand(req: any): Promise<UnitCommandResponse> {
    // Placeholder: In production, this would:
    // 1. Validate request body
    // 2. Call C2RouterService via gRPC
    // 3. Return response
    
    return {
      success: true,
      unitId: req.unitId,
      message: 'Command dispatched (placeholder)',
      timestampNs: Date.now() * 1_000_000,
    };
  }
  
  /**
   * POST /api/c2/swarm
   * 
   * Execute a command on multiple units
   */
  static async executeSwarmCommand(req: SwarmCommandRequest): Promise<SwarmCommandResponse> {
    // Placeholder: In production, this would:
    // 1. Validate request body
    // 2. Verify target unit count
    // 3. Call C2RouterService via gRPC
    // 4. Return aggregated response
    
    return {
      swarmCommandId: req.swarmCommandId,
      totalUnits: req.targetUnitIds.length,
      successCount: 0,
      failureCount: 0,
      timeoutCount: 0,
      completionPercent: 0,
      timestampNs: Date.now() * 1_000_000,
    };
  }
  
  /**
   * GET /api/c2/command/:id/status
   * 
   * Get the status of a command
   */
  static async getCommandStatus(commandId: string): Promise<CommandStatusResponse> {
    // Placeholder: In production, this would:
    // 1. Query command status from C2RouterService
    // 2. Return current status
    
    return {
      commandId,
      status: 'pending',
      details: {},
      timestampNs: Date.now() * 1_000_000,
    };
  }
  
  /**
   * POST /api/c2/swarm/:id/abort
   * 
   * Abort a swarm command
   */
  static async abortSwarmCommand(swarmCommandId: string, reason: string): Promise<AbortResponse> {
    // Placeholder: In production, this would:
    // 1. Call C2RouterService to abort command
    // 2. Propagate abort to all pending units
    // 3. Return result
    
    return {
      success: true,
      message: `Swarm command ${swarmCommandId} aborted: ${reason}`,
      timestampNs: Date.now() * 1_000_000,
    };
  }
}

/**
 * Example Express.js route setup (commented out):
 * 
 * import express from 'express';
 * const router = express.Router();
 * 
 * router.post('/api/c2/command', async (req, res) => {
 *   try {
 *     const response = await C2Routes.executeUnitCommand(req.body);
 *     res.json(response);
 *   } catch (error) {
 *     res.status(500).json({ error: error.message });
 *   }
 * });
 * 
 * router.post('/api/c2/swarm', async (req, res) => {
 *   try {
 *     const response = await C2Routes.executeSwarmCommand(req.body);
 *     res.json(response);
 *   } catch (error) {
 *     res.status(500).json({ error: error.message });
 *   }
 * });
 * 
 * router.get('/api/c2/command/:id/status', async (req, res) => {
 *   try {
 *     const response = await C2Routes.getCommandStatus(req.params.id);
 *     res.json(response);
 *   } catch (error) {
 *     res.status(500).json({ error: error.message });
 *   }
 * });
 * 
 * router.post('/api/c2/swarm/:id/abort', async (req, res) => {
 *   try {
 *     const response = await C2Routes.abortSwarmCommand(req.params.id, req.body.reason);
 *     res.json(response);
 *   } catch (error) {
 *     res.status(500).json({ error: error.message });
 *   }
 * });
 * 
 * export default router;
 */
